# ka9q-radio

./: .gitignore  66-hackrf.rules  68-funcube-dongle.rules  98-sockbuf.conf  99-rx888.rules  CHANGES.md  CMAKE_README.md  CMakeLists.txt  Doxyfile  FFTW3.md  INDEX.md  INSTALL.md  INSTALL.txt  MIGRATION_GUIDE.md  Makefile  Makefile.debug  Makefile.jonsnow  Makefile.linux  Makefile.osx  Makefile.pi  Makefile.sdrplay  README.md  RPi-compile.sh  TODO.md  VISUAL_SUMMARY.txt  airspy.c  airspy.conf  airspy@.service  airspyd.c  airspyd.conf  airspyd@.service  airspyhf.c  airspyhf@.service  airspyhfd.c  airspyhfd@.service  aprs.c  aprs.conf  aprsfeed.c  aprsfeed.service  attr.c  (+192 more)
.github/workflows/: ci.yml
aux/: 50-multicast.conf  AUX_SYSTEM_CONFIG_GUIDE.md  CMakeLists.txt  Makefile  RPi-compile  aprsfeed.rotate  ft4.rotate  ft8.rotate  help.txt  hfdl.rotate  ka9q-cleanups  ka9q-radio-setup  ka9q-radio.tmpfiles  modes.conf  presets.conf  purge.sh  radio.sysusers  recordings.rotate  start-hfdl.sh  start-ka9q-horus  wspr.rotate
cmake/: AddDrivers.cmake  CMakePresets.json  CompilerFlags.cmake  DetectAlloca.cmake  DetectLibusbStringDescriptor.cmake  DetectSockets.cmake  FindDeps.cmake  FindHIDAPI.cmake  Options.cmake  QUICK_REFERENCE.md  README.md  ka9q_config.h.in
config/: .gitignore  04-2m-raster.conf  05-125-raster.conf  06-70-25-raster.conf  Makefile  README  airspy-blacklist.conf  ft4-decode.conf  ft8-decode.conf  ft8-decoded.conf  funcubed.conf  hfdl-10.conf  hfdl-11.conf  hfdl-13.conf  hfdl-15.conf  hfdl-17.conf  hfdl-2.conf  hfdl-21.conf  hfdl-3.conf  hfdl-4.conf  hfdl-5.conf  hfdl-6.conf  hfdl-8.conf  hfdl.conf  horus.conf  opusd@2m.conf  opusd@70cm.conf  opusd@cb-lsb.conf  opusd@darn.conf  opusd@hf.conf  opusd@kpbs.conf  opusd@papa.conf  opusd@wins.conf  packetd.conf  pinball.conf  radiod@10m.conf  radiod@6m.conf  radiod@airspy-autorx.conf  radiod@airspy-generic.conf  radiod@airspy-ka9q-125cm.conf  (+51 more)
config/examples/: radiod@fobos-generic.conf  radiod@kph1.conf  radiod@rx888-oe9ghv.conf  radiod@sdrplay-generic.conf
config/fragments/: 60m.conf  6mfm.conf  airspy-noptc-125cm.conf  airspy.conf  chp.conf  freedv.conf  ft8-individual.conf  ft8.conf  ibp.conf  rx888.conf  sig-gen.conf  wwf.conf
config/radiod@dp0gvn.conf.d/: 00-global-dp0gvn.conf  01-rx888-dp0gvn.conf  02-wspr.conf  39-ft4.conf  39-ft8-wide.conf
debian/: .gitignore  README.Debian.ex  README.ex  README.source.ex  changelog  control  copyright  debhelper-build-stamp  gbp.conf.ex  ka9q-radio-airspy.install  ka9q-radio-airspy.postinst  ka9q-radio-airspyhf.install  ka9q-radio-bladerf.install  ka9q-radio-common.install  ka9q-radio-common.postinst  ka9q-radio-common.preinst  ka9q-radio-common.tmpfiles  ka9q-radio-config-examples.install  ka9q-radio-config-examples.postinst  ka9q-radio-control.install  ka9q-radio-control.postinst  ka9q-radio-docs.docs.ex  ka9q-radio-fobos.install  ka9q-radio-fobos.install-disabled  ka9q-radio-ft.install  ka9q-radio-ft.postinst  ka9q-radio-ft.tmpfiles  ka9q-radio-funcube.install  ka9q-radio-hackrf.install  ka9q-radio-hfdl.install  ka9q-radio-hfdl.postinst  ka9q-radio-hfdl.tmpfiles  ka9q-radio-horus.install  ka9q-radio-horus.postinst  ka9q-radio-hydrasdr.install  ka9q-radio-monitor.install  ka9q-radio-monitor.install.arm64  ka9q-radio-monitor.postinst  ka9q-radio-packet.install  ka9q-radio-packet.postinst  (+29 more)
docs/: 2022-Dayton-talk.odp  CMakeLists.txt  FFTW3.md  Fobos_SDR.md  INSTALL.md  KA9Q-AGC.md  Makefile  NETWORK-NOTES.md  airspy.html  airspy.md  aprs.1  aprsfeed.8  control.1  ctcss.1  cwd.1  fft-gen.1  ft8.md  funcube.md  hfdl.md  jt-decoded.1  ka9q-api.md  ka9q-radio-2.md  ka9q-radio-3.md  ka9q-radio-commands.numbers  ka9q-radio.md  metadump.1  modes.conf.md  monitor.1  monitor.md  noise.md  notes.md  opussend.1  packetd.8  pcmrecord.1  pcmsend.1  powers.1  presets.conf.md  radiod.8  rtlsdr.md  rx888.md  (+2 more)
docs/SDR/: airspy.md  bladerf.md  fobos.md  funcube.md  hackrf.md  hydrasdr.md  rtlsdr.md  rx888.md  sdrplay.md
docs/utils/: control.md  monitor.md  pcmrecord.md
rules/: 51-airspy.rules  51-hydrasdr.rules  52-airspy-ka9q.rules  52-airspyhf.rules  53-airspy-ka9q.rules  54-bladerf.rules  66-hackrf.rules  66-sdrplay.rules  68-funcube-dongle-proplus.rules  69-funcube-ka9q.rules  70-rx888-boot.rules  71-rx888-autoload.rules-disabled  71-rx888.rules  72-rx888-ka9q.rules  73-fobos-sdr.rules  74-fobos-sdr-ka9q.rules  99-rx888.rules  CMakeLists.txt  Makefile  README  UDEV_RULES_GUIDE.md
scripts/: analyze_dependencies.sh  dependency_discovery.md  secondary_dependencies_guide.md  setup.sh
service/: CMakeLists.txt  MACOS_FREEBSD_SERVICE_GUIDE.md  Makefile  SERVICE_FILES_GUIDE.md  acars.service  acars.service.in  aprsfeed.service  aprsfeed.service.in  cwd.service  cwd.service.in  ft4-decode.service  ft4-decode.service.in  ft4-decode@.service  ft4-decode@.service.in  ft4-decoded.service  ft4-record.service  ft4-record.service.in  ft8-decode.service  ft8-decode.service.in  ft8-decode@.service  ft8-decode@.service.in  ft8-decoded.service  ft8-record.service  ft8-record.service.in  hfdl.service  hfdl.service.in  hfdl@.service  horusdemod.service  horusdemod.service.in  opusd@.service  packetd.service  packetd.service.in  radiod@.service  radiod@.service.in  rdsd.service  recordings@.service  recordings@.service.in  rx888_boot.service  rx888_boot.service.in  set_lo_multicast.service  (+4 more)
share/: 120s_failure.img  120s_watchdog.img  20s_watchdog.img  60s_watchdog.img  CMakeLists.txt  Makefile  SDDC_FX3.img  W1EUJ_0.1.0_FX3.img  bandplan.txt  help.txt  id.txt  ka9q_ctl.lua  monitor-help.txt  presets.conf  ssrc-decimal.lua  start-hfdl.sh
src/: .gitignore  Brewfile  CMakeLists.txt  Makefile  airspy.c  airspyhf.c  aprs.c  aprsfeed.c  attr.c  audio.c  avahi.c  avahi.h  avahi_browse.c  ax25.c  ax25.h  bandplan.c  bandplan.h  bladerf.c  compat_iniparser.h  compat_libusb.h  compat_net.h  compat_opus.h  compat_xattr.h  config.c  config.h  config_paths.h  control.c  ctcss.c  cwd.c  decode_status.c  dump.c  ezusb.c  ezusb.h  fcd.c  fft-gen.c  filter.c  filter.h  fm.c  fobos.c  funcube.c  (+67 more)
src/old/: decimate.c
(+551 files in other folders)
